--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<meta property="og:title" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網">
-		<meta property="og:url" content="https://nkustacappella.nfs.tw/" />
-		<meta property="og:image" content="https://nkustacappella.nfs.tw/img/og_img.png"
+		<meta property="og:url" content="https://nkustacappella.github.io/" />
+		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"
 		/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
