--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			國立高雄科技大學 A CAPPELLA 阿卡貝拉社
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網">
+		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
 		<meta name="keywords" content="nkust,nkfust,acappella,阿卡貝拉,國立高雄科技大學,高科大,高第一,社團,第一校區"
 		/>
 		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'
