--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>
-			國立高雄科技大學 A CAPPELLA 阿卡貝拉社
-		</title>
+		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
-		<meta name="keywords" content="nkust,nkfust,acappella,阿卡貝拉,國立高雄科技大學,高科大,高第一,社團,第一校區"
-		/>
-		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'
-		/>
+		<meta name="keywords" content="nkust,nkfust,acappella,阿卡貝拉,國立高雄科技大學,高科大,高第一,社團,第一校區"/>
+		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'/>
 		<meta property="og:title" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網">
 		<meta property="og:url" content="https://nkustacappella.github.io/" />
-		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"
-		/>
+		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -25,10 +20,8 @@
 		<link rel="stylesheet" href="css/fontAwesome.css">
 		<link rel="stylesheet" href="css/light-box.css">
 		<link rel="stylesheet" href="css/templatemo-main.css">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
-		rel="stylesheet">
-		<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js">
-		</script>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+		<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 		
 		<script src="https://apis.google.com/js/api.js"></script>
 		<script>
@@ -113,6 +106,10 @@
 			}
 			gapi.load('client', init);
 		</script>
+		
+		<!-- //Google Search Console 驗證 -->
+		<meta name="google-site-verification" content="JalGPEDkPtE_Uwz9jfVznuVzJ8LIlQaKk175JX6YOAY" />
+		<!-- //Google Search Console 驗證 -->
 		
 	</head>
 	<body>
