Google Analytics 驗證

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
 		<meta name="google-site-verification" content="JalGPEDkPtE_Uwz9jfVznuVzJ8LIlQaKk175JX6YOAY" />
 		<!-- //Google Search Console 驗證 -->
 		
+		<!-- //Google Analytics 驗證 -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146412918-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-146412918-1');
+		</script>
+		<!-- //Google Analytics 驗證 -->
+		
 	</head>
 	<body>
 		<div class="sequence">
@@ -485,10 +497,10 @@
 		<div class="footer">
 			<div class="content">
 				<p>
-<script type="text/javascript">
-	var d=new Date();
-	document.write("Copyright &copy; 2015-" + d.getFullYear());
-</script>
+		<script type="text/javascript">
+			var d=new Date();
+			document.write("Copyright &copy; 2015-" + d.getFullYear());
+		</script>
 					<a href="https://fb.me/nkustAcappella" target="_blank">
 						國立高雄科技大學 A CAPPELLA 社
 					</a>
@@ -555,18 +567,7 @@
 				};
 			}
 		</script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146412918-1">
-		</script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-146412918-1');
-		</script>
-	
+		
 	<!-- Load Facebook SDK for JavaScript -->
       <div id="fb-root"></div>
       <script>
