--- a/index.html
+++ b/index.html
@@ -568,34 +568,34 @@
 			}
 		</script>
 		
-	<!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            xfbml            : true,
-            version          : 'v7.0'
-          });
-        };
+		<!-- //FaceBook 洽談外掛程式 -->
+		<!-- Load Facebook SDK for JavaScript -->
+		<div id="fb-root"></div>
+		<script>
+			window.fbAsyncInit = function() {
+			FB.init({
+				xfbml            : true,
+				version          : 'v7.0'
+			});
+			};
+			
+			(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
+		</script>
 
-        (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
-
-      <!-- Your Chat Plugin code -->
-      <div class="fb-customerchat"
-        attribution=setup_tool
-        page_id="644651865671736"
-  logged_in_greeting="嗨~有需要什麼協助嗎?"
-  logged_out_greeting="嗨~有需要什麼協助嗎?">
-      </div>
-		
-		
+		<!-- Your Chat Plugin code -->
+		<div class="fb-customerchat"
+			attribution=setup_tool
+			page_id="644651865671736"
+			logged_in_greeting="嗨~有需要什麼協助嗎?"
+			logged_out_greeting="嗨~有需要什麼協助嗎?">
+		</div>
+		<!-- //FaceBook 洽談外掛程式 -->
 		
 	</body>
-
 </html>
