新增 favicon.ico 圖示

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 		<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 		
+		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+		
 		<script src="https://apis.google.com/js/api.js"></script>
 		<script>
 			// 財報 JavaScript
