--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/關於我們_關於我們.jpg" alt="first service">
+													<img src="img/關於我們_關於我們.png" alt="first service">
 												</div>
 											</div>
 										</div>
