更改社群連結顯示方式

--- a/index.html
+++ b/index.html
@@ -232,19 +232,18 @@
 								</em>
 							</p>
 							<div class="fb-btn">
+								<a href="https://www.youtube.com/channel/UCLSFLk5iIqWL2Ev6VDsmCZA?sub_confirmation=1" target="_blank">
+									<i class="fa fa-youtube"></i> YouTube 頻道
+								</a>
+							</div>
+							<div class="fb-btn">
 								<a href="https://fb.me/nkustAcappella" target="_blank">
-									FaceBook
+									<i class="fa fa-facebook"></i> FaceBook
 								</a>
 							</div>
 							<div class="fb-btn">
 								<a href="https://www.instagram.com/nkustacappella/" target="_blank">
-									Instagram
-								</a>
-							</div>
-							<div class="fb-btn">
-								<a href="https://www.youtube.com/channel/UCLSFLk5iIqWL2Ev6VDsmCZA?sub_confirmation=1"
-								target="_blank">
-									YouTube
+									<i class="fa fa-instagram"></i> Instagram
 								</a>
 							</div>
 						</div>
