影片嘗試加入 description

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 									'				<div class="hover-effect">' +
 									'					<div class="hover-content">' +
 									'						<h2>' + resp.items[key].snippet.title + '</h2>' +
+									'						<p>' + resp.items[key].snippet.description + '</p>' +
 									'					</div>' +
 									'				</div>' +
 									'			</a>' +
