description 擷取前10個字

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									'				<div class="hover-effect">' +
 									'					<div class="hover-content">' +
 									'						<h2>' + resp.items[key].snippet.title + '</h2>' +
-									'						<p>' + resp.items[key].snippet.description + '</p>' +
+									'						<p>' + resp.items[key].snippet.description.substr(0, 10) + '</p>' +
 									'					</div>' +
 									'				</div>' +
 									'			</a>' +
