--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				request.execute(function (resp) {
 					if(resp && resp.items.length > 0) { //如果resp物件不是空的話 而且 resp.items項目元素大於0的話
 						for(var key in resp.items) {
-							document.getElementById('videoInfo').innerHTML += 
+							document.getElementById('playListInfo').innerHTML += 
 								'<div class="col-md-4 col-sm-6">' +
 								'	<div class="item">' +
 								'		<div class="thumb">' +
@@ -484,7 +484,7 @@
 			<div class="slide" id="6">
 				<div class="content fourth-content">
 					<div class="container-fluid">
-						<div class="row" id="printVideo">
+						<div class="row" id="playListInfo">
 							<!-- // CODE格式
 							<div class='col-md-4 col-sm-6'>
 								<div class='item'>
