--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.maxres.url + '">' +
+								'				<img src="' + resp.items[key].snippet.thumbnails.default.url + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
