播放清單頁 網址錯誤

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 								'<div class="col-md-4 col-sm-6">' +
 								'	<div class="item">' +
 								'		<div class="thumb">' +
-								'			<a href="https://www.youtube.com/playlist?list=PLK7wx6T9EnHN8loICnVqL7B4pH7jyhEhz' + resp.items[key].id + '" target="_blank">' +
+								'			<a href="https://www.youtube.com/playlist?list=' + resp.items[key].id + '" target="_blank">' +
 								'				<div class="hover-effect">' +
 								'					<div class="hover-content">' +
 								'						<h2>' + resp.items[key].snippet.title + '</h2>' +
