Revert "播放清單頁 無Max 封面問題"
This reverts commit d69b14c109bcda2340140b56cd26653f57168f1f.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.default.url + '">' +
+								'				<img src="' + resp.items[key].snippet.thumbnails.maxres.url + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
