--- a/index.html
+++ b/index.html
@@ -164,18 +164,8 @@
 	</head>
 	<body>
 		<div class="sequence">
-			<div class="seq-preloader">
-				<svg width="39" height="16" viewBox="0 0 39 16" xmlns="http://www.w3.org/2000/svg"
-				class="seq-preload-indicator">
-					<g fill="#F96D38">
-						<path class="seq-preload-circle seq-preload-circle-1" d="M3.999 12.012c2.209 0 3.999-1.791 3.999-3.999s-1.79-3.999-3.999-3.999-3.999 1.791-3.999 3.999 1.79 3.999 3.999 3.999z"
-						/>
-						<path class="seq-preload-circle seq-preload-circle-2" d="M15.996 13.468c3.018 0 5.465-2.447 5.465-5.466 0-3.018-2.447-5.465-5.465-5.465-3.019 0-5.466 2.447-5.466 5.465 0 3.019 2.447 5.466 5.466 5.466z"
-						/>
-						<path class="seq-preload-circle seq-preload-circle-3" d="M31.322 15.334c4.049 0 7.332-3.282 7.332-7.332 0-4.049-3.282-7.332-7.332-7.332s-7.332 3.283-7.332 7.332c0 4.05 3.283 7.332 7.332 7.332z"
-						/>
-					</g>
-				</svg>
+			<div class="seq-preloader">		
+				<svg width="39" height="16" viewBox="0 0 39 16" xmlns="http://www.w3.org/2000/svg" class="seq-preload-indicator"><g fill="#F96D38"><path class="seq-preload-circle seq-preload-circle-1" d="M3.999 12.012c2.209 0 3.999-1.791 3.999-3.999s-1.79-3.999-3.999-3.999-3.999 1.791-3.999 3.999 1.79 3.999 3.999 3.999z"/><path class="seq-preload-circle seq-preload-circle-2" d="M15.996 13.468c3.018 0 5.465-2.447 5.465-5.466 0-3.018-2.447-5.465-5.465-5.465-3.019 0-5.466 2.447-5.466 5.465 0 3.019 2.447 5.466 5.466 5.466z"/><path class="seq-preload-circle seq-preload-circle-3" d="M31.322 15.334c4.049 0 7.332-3.282 7.332-7.332 0-4.049-3.282-7.332-7.332-7.332s-7.332 3.283-7.332 7.332c0 4.05 3.283 7.332 7.332 7.332z"/></g></svg	>	
 			</div>
 		</div>
 		<nav>
@@ -186,24 +176,12 @@
 				<img src="img/mini_logo.png" alt="">
 			</div>
 			<ul>
-				<li>
-					<a href="#1"><i class="fa fa-home"></i><em>首　　頁</em></a>
-				</li>
-				<li>
-					<a href="#2"><i class="fa fa-user"></i><em>關於我們</em></a>
-				</li>
-				<li>
-					<a href="#3"><i class="fa fa-book"></i><em>理念宗旨</em></a>
-				</li>
-				<li>
-					<a href="#4"><i class="fa fa-file-text"></i><em>社團報表</em></a>
-				</li>
-				<li>
-					<a href="#5"><i class="fa fa-video-camera"></i><em>影片展示</em></a>
-				</li>
-				<li>
-					<a href="#6"><i class="fa fa-envelope"></i><em>聯絡我們</em></a>
-				</li>
+				<li><a href="#1"><i class="fa fa-home"></i> <em>首　　頁</em></a></li>
+				<li><a href="#2"><i class="fa fa-user"></i> <em>關於我們</em></a></li>
+				<li><a href="#3"><i class="fa fa-book"></i> <em>理念宗旨</em></a></li>
+				<li><a href="#4"><i class="fa fa-file-text"></i> <em>社團報表</em></a></li>
+				<li><a href="#5"><i class="fa fa-video-camera"></i> <em>影片展示</em></a></li>
+				<li><a href="#6"><i class="fa fa-envelope"></i> <em>聯絡我們</em></a></li>
 			</ul>
 		</nav>
 		<div class="slides">
@@ -216,34 +194,16 @@
 							</div>
 						</div>
 						<div class="col-md-9">
-							<h2>
-								國立高雄科技大學 A CAPPELLA 社
-							</h2>
+							<h2>國立高雄科技大學 A CAPPELLA 社</h2>
 							<p>
 								<em>
 									國立高雄科技大學第一校區A CAPPELLA社成立於2015年
 								</em>
 							</p>
-							<p>
-								<em>
-									我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。
-								</em>
-							</p>
-							<div class="fb-btn">
-								<a href="https://www.youtube.com/channel/UCLSFLk5iIqWL2Ev6VDsmCZA?sub_confirmation=1" target="_blank">
-									<i class="fa fa-youtube"></i> YouTube 頻道
-								</a>
-							</div>
-							<div class="fb-btn">
-								<a href="https://fb.me/nkustAcappella" target="_blank">
-									<i class="fa fa-facebook"></i> FaceBook
-								</a>
-							</div>
-							<div class="fb-btn">
-								<a href="https://www.instagram.com/nkustacappella/" target="_blank">
-									<i class="fa fa-instagram"></i> Instagram
-								</a>
-							</div>
+							<p><em>我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。</em></p>
+							<div class="fb-btn"><a href="https://www.youtube.com/channel/UCLSFLk5iIqWL2Ev6VDsmCZA?sub_confirmation=1" target="_blank"><i class="fa fa-youtube"></i> YouTube 頻道</a></div>
+							<div class="fb-btn"><a href="https://fb.me/nkustAcappella" target="_blank"><i class="fa fa-facebook"></i> FaceBook</a></div>
+							<div class="fb-btn"><a href="https://www.instagram.com/nkustacappella/" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></div>
 						</div>
 					</div>
 				</div>
@@ -258,30 +218,13 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-content">
-													<h2>
-														關於我們
-													</h2>
-													<p>
-														國立高雄科技大學第一校區A CAPPELLA社成立於2015年
-													</p>
-													<p>
-														我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。
-													</p>
-													<p>
-														A Cappella指的就是不使用任何的樂器，只利用人聲所製造出首歌曲的「無樂器伴奏合唱團」。
-													</p>
-													<p>
-														現代流行歌曲的A Cappella，已不單單指某一類型的歌曲，而是泛指一種演唱形式，一種以人聲為樂器的編奏法；它的變化也越來越多，從單純三四聲部的合唱，演變到多人重唱，再演變到模擬樂器或大自然等聲音，僅僅人聲，已經可以創造出類似管弦樂或流行樂曲的豐富效果。在A
-														Cappella中，被分為五個聲部，分別是：女高音（Soprano）、女中音（Alto）、男高音（Tenor）、男低音（Bass）、人聲打擊（Vocal
-														Percussion）。
-													</p>
-													<p>
-														演唱A Cappella是件非常因難的事情，除了要熟練自己所分屬分布的樂譜之外，個人的聲線與團體的練習、默契都是非常重要的，每一首歌所需要練習的時間，可能是其他使用樂器演奏支樂團的好幾倍，節拍、合聲、感情的收放，每首歌曲裡都必須要不斷的練習再練習，才能將歌曲詮釋得更完美、更好聽、更加動人心弦。
-													</p>
-													<p>
-														原本大家是沒有任何基礎的，之後本社慢慢地開始團結起來，從毫無關係的陌生人開始，因為抱持相同信念及興趣，才能聚在一起開心的唱歌、玩人聲，彼此的關係就像家人一樣，我們幾乎每天見面，就為了練習接下來的演出，漸漸地建立起社團的向心力及歸屬感。
-													</p>
-													</p>
+													<h2>關於我們</h2>
+													<p>國立高雄科技大學第一校區A CAPPELLA社成立於2015年</p>
+													<p>我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。</p>
+													<p>A Cappella指的就是不使用任何的樂器，只利用人聲所製造出首歌曲的「無樂器伴奏合唱團」。</p>
+													<p>現代流行歌曲的A Cappella，已不單單指某一類型的歌曲，而是泛指一種演唱形式，一種以人聲為樂器的編奏法；它的變化也越來越多，從單純三四聲部的合唱，演變到多人重唱，再演變到模擬樂器或大自然等聲音，僅僅人聲，已經可以創造出類似管弦樂或流行樂曲的豐富效果。在ACappella中，被分為五個聲部，分別是：女高音（Soprano）、女中音（Alto）、男高音（Tenor）、男低音（Bass）、人聲打擊（VocalPercussion）。</p>
+													<p>演唱A Cappella是件非常因難的事情，除了要熟練自己所分屬分布的樂譜之外，個人的聲線與團體的練習、默契都是非常重要的，每一首歌所需要練習的時間，可能是其他使用樂器演奏支樂團的好幾倍，節拍、合聲、感情的收放，每首歌曲裡都必須要不斷的練習再練習，才能將歌曲詮釋得更完美、更好聽、更加動人心弦。</p>
+													<p>原本大家是沒有任何基礎的，之後本社慢慢地開始團結起來，從毫無關係的陌生人開始，因為抱持相同信念及興趣，才能聚在一起開心的唱歌、玩人聲，彼此的關係就像家人一樣，我們幾乎每天見面，就為了練習接下來的演出，漸漸地建立起社團的向心力及歸屬感。</p>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -302,20 +245,10 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-content">
-													<h2>
-														什麼是「A Cappella」？
-													</h2>
-													<p>
-														A Cappella指的就是不使用任何的樂器，只利用人聲所製造出首歌曲的「無樂器伴奏合唱團」。
-													</p>
-													<p>
-														但是它的原意必須要追朔到中世紀時期。教會在歐洲的藝術歷史中扮演著非常重要的角色。中世紀時期的教堂內唯一的音樂就是純人聲的葛利果聖歌，因為「人聲」是唯一一個由上帝所創造出的「樂器」。當時為了要區分教堂內的聖歌和世俗音樂，人們就開始稱純人聲音樂為「在教堂裡的形式」的音樂，而義大利文就是「a
-														cappella」。雖然後來教會開放了，准許在教堂內使用不同的樂器，同時純人聲音樂也慢慢走向世俗，但人們還是繼續稱這樣的音樂形式-a cappella。
-													</p>
-													<p>
-														現代流行歌曲的A Cappella，已不單單指某一類型的歌曲，而是泛指一種演唱形式，一種以人聲為樂器的編奏法;它的變化也越來越多，從單純三四聲部的合唱，演變到多人重唱，再演變到模擬樂器或大自然等聲音，僅僅人聲，已經可以創造出類似管弦樂或流行樂曲的豐富效果。在ACappela，被分為五個聲部，分別是：女高音（Soprano），女中音（Alto），男高音（Tenor），男低音（Bass），人聲打擊（Vocal
-														Percussion）。
-													</p>
+													<h2>什麼是「A Cappella」？</h2>
+													<p>A Cappella指的就是不使用任何的樂器，只利用人聲所製造出首歌曲的「無樂器伴奏合唱團」。</p>
+													<p>但是它的原意必須要追朔到中世紀時期。教會在歐洲的藝術歷史中扮演著非常重要的角色。中世紀時期的教堂內唯一的音樂就是純人聲的葛利果聖歌，因為「人聲」是唯一一個由上帝所創造出的「樂器」。當時為了要區分教堂內的聖歌和世俗音樂，人們就開始稱純人聲音樂為「在教堂裡的形式」的音樂，而義大利文就是「acappella」。雖然後來教會開放了，准許在教堂內使用不同的樂器，同時純人聲音樂也慢慢走向世俗，但人們還是繼續稱這樣的音樂形式-a cappella。</p>
+													<p>現代流行歌曲的A Cappella，已不單單指某一類型的歌曲，而是泛指一種演唱形式，一種以人聲為樂器的編奏法;它的變化也越來越多，從單純三四聲部的合唱，演變到多人重唱，再演變到模擬樂器或大自然等聲音，僅僅人聲，已經可以創造出類似管弦樂或流行樂曲的豐富效果。在ACappela，被分為五個聲部，分別是：女高音（Soprano），女中音（Alto），男高音（Tenor），男低音（Bass），人聲打擊（VocalPercussion）。</p>
 												</div>
 											</div>
 										</div>
@@ -326,18 +259,10 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="right-content">
-													<h2>
-														創社經歷
-													</h2>
-													<p>
-														在創立期間由於新社員幾乎都是零基礎，要組成一個A Cappella團是非常不容易的，也因此創社初期除了新進人員的訓練，還有經費、行政手續等等，因為社團裡沒有相關經驗的幹部們，所以一切的一切對本社來說都是一個艱難的挑戰。
-													</p>
-													<p>
-														透過社員們的幫忙及努力，本社慢慢地開始團結起來，從毫無關係的陌生人開始，因為抱持相同信念及興趣，才能聚在一起開心的唱歌、玩人聲，彼此的關係就像家人一樣，我們幾乎每天見面，就為了練習接下來的演出，漸漸地建立起社團的向心力及歸屬感。
-													</p>
-													<p>
-														演唱A Cappella是件非常因難的事情，除了要熟練自己所分屬分布的樂譜之外，個人的聲線與團體的練習、默契都是非常重要的，每一首歌所需要練習的時間，可能是其他使用樂器演奏支樂團的好幾倍，節拍、合聲、感情的收放，每首歌曲裡都必須要不斷的練習再練習，才能將歌曲證釋得更完美、更好聽、更加動人心弦。
-													</p>
+													<h2>創社經歷</h2>
+													<p>在創立期間由於新社員幾乎都是零基礎，要組成一個A Cappella團是非常不容易的，也因此創社初期除了新進人員的訓練，還有經費、行政手續等等，因為社團裡沒有相關經驗的幹部們，所以一切的一切對本社來說都是一個艱難的挑戰。</p>
+													<p>透過社員們的幫忙及努力，本社慢慢地開始團結起來，從毫無關係的陌生人開始，因為抱持相同信念及興趣，才能聚在一起開心的唱歌、玩人聲，彼此的關係就像家人一樣，我們幾乎每天見面，就為了練習接下來的演出，漸漸地建立起社團的向心力及歸屬感。</p>
+													<p>演唱A Cappella是件非常因難的事情，除了要熟練自己所分屬分布的樂譜之外，個人的聲線與團體的練習、默契都是非常重要的，每一首歌所需要練習的時間，可能是其他使用樂器演奏支樂團的好幾倍，節拍、合聲、感情的收放，每首歌曲裡都必須要不斷的練習再練習，才能將歌曲證釋得更完美、更好聽、更加動人心弦。</p>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -363,12 +288,8 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-content">
-													<h2>
-														「Share the Joy」
-													</h2>
-													<p>
-														一個人唱歌是開心的，但是將自己的歌聲分享給大家，那是更上一層樓的感動，因此我們的理念是將歌聲傳遞給更多人聽見，分享我們的喜悅。
-													</p>
+													<h2>「Share the Joy」</h2>
+													<p>一個人唱歌是開心的，但是將自己的歌聲分享給大家，那是更上一層樓的感動，因此我們的理念是將歌聲傳遞給更多人聽見，分享我們的喜悅。</p>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -389,12 +310,8 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-content">
-													<h2>
-														「Find a Friend」
-													</h2>
-													<p>
-														A Cappella的靈魂所在，就是和聲，尋找志同道合的夥伴一起唱出旋律的高低起伏，在合音之中尋找彼此的默契。
-													</p>
+													<h2>「Find a Friend」</h2>
+													<p>A Cappella的靈魂所在，就是和聲，尋找志同道合的夥伴一起唱出旋律的高低起伏，在合音之中尋找彼此的默契。</p>
 												</div>
 											</div>
 										</div>
@@ -477,19 +394,10 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<h2>
-								國立高雄科技大學 A CAPPELLA 社
-							</h2>
+							<h2>國立高雄科技大學 A CAPPELLA 社</h2>
 							<hr>
-							<h4>
-								地址：82445 高雄市燕巢區大學路1號 A CAPPELLA 社
-							</h4>
-							<h4>
-								FaceBook Messenger：
-								<a href="https://m.me/nkustAcappella" target="_blank">
-									https://m.me/nkustAcappella
-								</a>
-							</h4>
+							<h4>地址：82445 高雄市燕巢區大學路1號 A CAPPELLA 社</h4>
+							<h4>FaceBook Messenger：<a href="https://m.me/nkustAcappella" target="_blank">https://m.me/nkustAcappella</a></h4>
 						</div>
 					</div>
 				</div>
@@ -498,65 +406,51 @@
 		<div class="footer">
 			<div class="content">
 				<p>
-		<script type="text/javascript">
-			var d=new Date();
-			document.write("Copyright &copy; 2015-" + d.getFullYear());
-		</script>
-					<a href="https://fb.me/nkustAcappella" target="_blank">
-						國立高雄科技大學 A CAPPELLA 社
-					</a>
-					| Moonlight
+					<script type="text/javascript">
+						document.write("Copyright &copy; 2015-" + new Date().getFullYear());
+					</script>
+					<a href="https://fb.me/nkustAcappella" target="_blank"> 國立高雄科技大學 A CAPPELLA 社 </a> | Moonlight
 				</p>
 			</div>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
-		</script>
-		<script>
-			window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
-		</script>
-		<script src="js/vendor/bootstrap.min.js">
-		</script>
-		<script src="js/datepicker.js">
-		</script>
-		<script src="js/plugins.js">
-		</script>
-		<script src="js/main.js">
-		</script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+		
+		<script src="js/vendor/bootstrap.min.js"></script>
+		
+		<script src="js/datepicker.js"></script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
+		
 		<script type="text/javascript">
 			$(document).ready(function() {
 
+				
+
 				// navigation click actions 
-				$('.scroll-link').on('click',
-				function(event) {
+				$('.scroll-link').on('click', function(event){
 					event.preventDefault();
 					var sectionID = $(this).attr("data-id");
 					scrollToID('#' + sectionID, 750);
 				});
 				// scroll to top action
-				$('.scroll-top').on('click',
-				function(event) {
+				$('.scroll-top').on('click', function(event) {
 					event.preventDefault();
-					$('html, body').animate({
-						scrollTop: 0
-					},
-					'slow');
+					$('html, body').animate({scrollTop:0}, 'slow');         
 				});
 				// mobile nav toggle
-				$('#nav-toggle').on('click',
-				function(event) {
+				$('#nav-toggle').on('click', function (event) {
 					event.preventDefault();
 					$('#main-nav').toggleClass("open");
 				});
 			});
 			// scroll function
-			function scrollToID(id, speed) {
+			function scrollToID(id, speed){
 				var offSet = 0;
 				var targetOffset = $(id).offset().top - offSet;
 				var mainNav = $('#main-nav');
-				$('html,body').animate({
-					scrollTop: targetOffset
-				},
-				speed);
+				$('html,body').animate({scrollTop:targetOffset}, speed);
 				if (mainNav.hasClass("open")) {
 					mainNav.css("height", "1px").removeClass("in").addClass("collapse");
 					mainNav.removeClass("open");
@@ -564,7 +458,7 @@
 			}
 			if (typeof console === "undefined") {
 				console = {
-					log: function() {}
+					log: function() { }
 				};
 			}
 		</script>
