移除影片發布日期字眼

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									'				<div class="hover-effect">' +
 									'					<div class="hover-content">' +
 									'						<h2>' + resp.items[key].snippet.title + '</h2>' +
-									'						<p>發布日期: ' + new Date(resp.items[key].contentDetails.videoPublishedAt).toLocaleString('zh-TW', {timeZone: 'Asia/Taipei'}) + '</p>' +
+									'						<p>' + new Date(resp.items[key].contentDetails.videoPublishedAt).toLocaleString('zh-TW', {timeZone: 'Asia/Taipei'}) + '</p>' +
 									'						<p>' + resp.items[key].snippet.description.substr(0, 50) + '......</p>' +
 									'					</div>' +
 									'				</div>' +
