--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 		<script type="text/javascript">
 				$(document).ready(function() {
 					$("span.youtube-link").grtyoutube({
-						autoPlay:false,
+						autoPlay:true,
 						theme: "dark"
 					}).click();
 				});
