YouTube推薦影片彈窗: 嘗試自動抓第一筆影片

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 					if(resp && resp.items.length > 0) { //如果resp物件不是空的話 而且 resp.items項目元素大於0的話
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
+								if(key == 0) {
+									document.getElementById('topYouTube').innerHTML += 
+										'<span class="youtube-link" youtubeid="gOSnYSdAr34"></span>';
+								}
+								
 								document.getElementById('videoInfo').innerHTML += 
 									'<div class="col-md-4 col-sm-6">' +
 									'	<div class="item">' +
@@ -502,7 +507,8 @@
 		<!-- GRT Youtube Popup -->
 		<script src="./js/grt-youtube-popup.js"></script>
 		
-		<span class="youtube-link" youtubeid="gOSnYSdAr34"></span>
+		<div id="topYouTube"></div>
+		
 		<script type="text/javascript">
 				$(document).ready(function() {
 					$("span.youtube-link").grtyoutube({
