--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
 								if(key == 0) {
 									document.getElementById('topYouTube').innerHTML += 
-										'<span class="youtube-link" youtubeid="gOSnYSdAr34"></span>';
+										'<span class="youtube-link" youtubeid="gOSnYSdAr34">' +
+										'</span>';
 								}
 								
 								document.getElementById('videoInfo').innerHTML += 
