YouTube推薦影片彈窗: TEST

--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
 					if(resp && resp.items.length > 0) { //如果resp物件不是空的話 而且 resp.items項目元素大於0的話
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
-								if(key == 0) {
-									document.getElementById('topYouTube').innerHTML += 
-										'<span class="youtube-link" youtubeid="gOSnYSdAr34">' +
-										'</span>';
+								if(key !== 0) {
+									document.getElementById('topYouTube').innerHTML = '<span class="youtube-link" youtubeid="gOSnYSdAr34"></span>';
 								}
 								
 								document.getElementById('videoInfo').innerHTML += 
