--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
 								//if(key !== 0) {
-									document.getElementById('topYouTube').innerHTML = '<span class="youtube-link" youtubeid="gOSnYSdAr34"></span>';
+									$("span.youtube-link").attr("youtubeid", "gOSnYSdAr34");
 								//}
 								
 								document.getElementById('videoInfo').innerHTML += 
@@ -506,12 +506,13 @@
 		<!-- GRT Youtube Popup -->
 		<script src="./js/grt-youtube-popup.js"></script>
 		
-		<div id="topYouTube"></div>
-		
+		<div id="topYouTube">
+		<span class="youtube-link" youtubeid="LFf5ZvepzSs"></span>
+		</div>
 		<script type="text/javascript">
 				$(document).ready(function() {
 					$("span.youtube-link").grtyoutube({
-						autoPlay:true,
+						autoPlay:false,
 						theme: "dark"
 					}).click();
 				});
