--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
 								//if(key !== 0) {
+									console.log(key);
 									var YOUTUBE_POP_VIDEO_ID = 'gOSnYSdAr34';
 								//}
 								
