--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 					if(resp && resp.items.length > 0) { //如果resp物件不是空的話 而且 resp.items項目元素大於0的話
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
-								//if(key !== 0) {
+								if(key == '0') {
 									console.log(key);
-									var YOUTUBE_POP_VIDEO_ID = 'gOSnYSdAr34';
-								//}
+									var YOUTUBE_POP_VIDEO_ID = 'PXfRMROY64g';
+								}
 								
 								document.getElementById('videoInfo').innerHTML += 
 									'<div class="col-md-4 col-sm-6">' +
