--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 					if(resp && resp.items.length > 0) { //如果resp物件不是空的話 而且 resp.items項目元素大於0的話
 						for(var key in resp.items) {
 							if(resp.items[key].snippet.title !== 'Private video') { //非私人影片才會顯示，要不然會噴錯
-								if(resp.items[key].snippet.position == 0) {
+								//if(resp.items[key].snippet.position == 0) {
 									console.log(key);
 									console.log(YOUTUBE_POP_VIDEO_ID);
-									var YOUTUBE_POP_VIDEO_ID = resp.items[key].contentDetails.videoId;
-								}
+									var YOUTUBE_POP_VIDEO_ID = 'gOSnYSdAr34';
+								//}
 									console.log(YOUTUBE_POP_VIDEO_ID);
 								
 								document.getElementById('videoInfo').innerHTML += 
