--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			}
 			
 			// YouTube推薦影片彈窗
-			var YOUTUBE_POP_VIDEO_ID = 'CBpi01t43ak'; //預設影片ID
+			YOUTUBE_POP_VIDEO_ID = 'CBpi01t43ak'; //預設影片ID
 			
 			// 影片展示 JavaScript
 			// API說明: https://developers.google.com/youtube/v3/docs/playlistItems
