--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
 									console.log(key);
 									console.log(YOUTUBE_POP_VIDEO_ID);
 									//var YOUTUBE_POP_VIDEO_ID = resp.items[key].contentDetails.videoId;
-									obj.value = resp.items[key].contentDetails.videoId;
-								}
+									console.log('CCC');
+									obj.value = 'XXXXXXXX';
 									console.log(YOUTUBE_POP_VIDEO_ID);
+									console.log('CCC_END');
+								}
 								
 								document.getElementById('videoInfo').innerHTML += 
 									'<div class="col-md-4 col-sm-6">' +
