--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									console.log(YOUTUBE_POP_VIDEO_ID);
 									//var YOUTUBE_POP_VIDEO_ID = resp.items[key].contentDetails.videoId;
 									console.log('CCC');
-									YOUTUBE_POP_VIDEO_ID.value = 'XXXXXXXX';
+									YOUTUBE_POP_VIDEO_ID.value = resp.items[key].contentDetails.videoId;
 									console.log(YOUTUBE_POP_VIDEO_ID);
 									console.log('CCC_END');
 								}
@@ -523,7 +523,7 @@
 					console.log(YOUTUBE_POP_VIDEO_ID);
 					console.log($("span.youtube-link").attr("youtubeid"));
 					
-					$("span.youtube-link").attr("youtubeid", YOUTUBE_POP_VIDEO_ID);
+					$("span.youtube-link").attr("youtubeid", YOUTUBE_POP_VIDEO_ID.value);
 					console.log($("span.youtube-link").attr("youtubeid"));
 					$("span.youtube-link").grtyoutube({
 						autoPlay:false,
