--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 		<script src="./js/grt-youtube-popup.js"></script>
 		
 		<span class="youtube-link" youtubeid=""></span>
-		<script type="text/javascript">
+		<script type="text/javascript" defer="defer">
 				$(document).ready(function() {
 					console.log(YOUTUBE_POP_VIDEO_ID);
 					console.log($("span.youtube-link").attr("youtubeid"));
