--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 		
 		<span class="youtube-link" youtubeid=""></span>
 		<script type="text/javascript">
-				$(document).ready(function() {
+				//$(document).ready(function() {
 					console.log(YOUTUBE_POP_VIDEO_ID);
 					console.log($("span.youtube-link").attr("youtubeid"));
 					
@@ -556,7 +556,7 @@
 						autoPlay:false,
 						theme: "dark"
 					}).click();
-				});
+				//});
 		</script>
 		<!-- //YouTube推薦影片彈窗 -->
 		
