--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 								</em>
 							</p>
 							<p><em>我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。</em></p>
-							<div class="fb-btn"><a href="https://www.youtube.com/channel/UCLSFLk5iIqWL2Ev6VDsmCZA?sub_confirmation=1" target="_blank"><i class="fa fa-youtube"></i> YouTube 頻道</a></div>
+							<div class="fb-btn"><a href="https://www.youtube.com/nkustacappella?sub_confirmation=1" target="_blank"><i class="fa fa-youtube"></i> YouTube 頻道</a></div>
 							<div class="fb-btn"><a href="https://fb.me/nkustAcappella" target="_blank"><i class="fa fa-facebook"></i> FaceBook</a></div>
 							<div class="fb-btn"><a href="https://www.instagram.com/nkustacappella/" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></div>
 						</div>
