變更底部顯示資料

--- a/index.html
+++ b/index.html
@@ -477,9 +477,13 @@
 					<script type="text/javascript">
 						document.write("Copyright &copy; 2015-" + new Date().getFullYear());
 					</script>
-					<a href="https://fb.me/nkustAcappella" target="_blank"> 國立高雄科技大學 A CAPPELLA 社 </a> | Moonlight
+					<a href="https://fb.me/nkustAcappella" target="_blank"> 國立高雄科技大學 A CAPPELLA 社 </a> | Powered by <a href="mailto:c107118223@nkust.edu.tw@nkust.edu.tw"> Chen, Hsin-Wei </a> | Designed by TemplateMo(Moonlight) | <a href="https://github.com/nkustacappella/nkustacappella.github.io" target="_blank"> GitHub </a>
 				</p>
 			</div>
+			<!-- 
+				Moonlight Template 
+				https://templatemo.com/tm-512-moonlight
+			-->
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
