--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社</title>
+		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
-		<meta name="keywords" content="nkust,nkfust,acappella,阿卡貝拉,國立高雄科技大學,高科大,高第一,社團,第一校區"/>
+		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
+		<meta name="keywords" content="nkust, nkfust, 國立高雄科技大學, 國立高雄第一科技大學, 高科大, 高第一, acappella, 阿卡貝拉, group, club, 社團, first campus, 第一校區"/>
 		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'/>
 		<meta property="og:title" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 官網">
+		<meta property="og:description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
 		<meta property="og:url" content="https://nkustacappella.github.io/" />
 		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
