--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
+		<meta name="description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
 		<meta name="keywords" content="nkust, nkfust, 國立高雄科技大學, 國立高雄第一科技大學, 高科大, 高第一, acappella, 阿卡貝拉, group, club, 社團, first campus, 第一校區"/>
 		<meta content='https://www.facebook.com/nkustAcappella/' property='article:author'/>
 		<meta property="og:title" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社 社團官網 | 國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
+		<meta property="og:description" content="國立高雄科技大學第一校區A CAPPELLA社成立於2015年。我們社團是一群樂愛音樂的大學生組成，本社的活動內容以增進社員技術、外接各項演出為主。">
 		<meta property="og:url" content="https://nkustacappella.github.io/" />
 		<meta property="og:image" content="https://nkustacappella.github.io/img/og_img.png"/>
 		<meta property="og:site_name" content="國立高雄科技大學 A CAPPELLA 阿卡貝拉社" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="css/fontAwesome.css">
+		
+		
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/v4-shims.css">
+		
 		<link rel="stylesheet" href="css/light-box.css">
 		<link rel="stylesheet" href="css/templatemo-main.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
@@ -53,7 +57,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.items[key].id + '">' +
+								'				<img src="https://drive.google.com/thumbnail?authuser=0&sz=w1500-h1000-p&id=' + resp.items[key].id + '" alt="' + resp.items[key].title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -126,7 +130,7 @@
 									'				</div>' +
 									'			</a>' +
 									'			<div class="image">' +
-									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '">' +
+									'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 									'			</div>' +
 									'		</div>' +
 									'	</div>' +
@@ -165,7 +169,7 @@
 								'				</div>' +
 								'			</a>' +
 								'			<div class="image">' +
-								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '">' +
+								'				<img src="' + resp.items[key].snippet.thumbnails.medium.url + '" alt="' + resp.items[key].snippet.title + '">' +
 								'			</div>' +
 								'		</div>' +
 								'	</div>' +
@@ -189,6 +193,7 @@
 		<!-- //Google Search Console 驗證 -->
 		
 		<!-- //Google Analytics 驗證 -->
+		<!-- //Google Analytics 追蹤碼 -->
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146412918-1"></script>
 		<script>
@@ -198,6 +203,7 @@
 
 		  gtag('config', 'UA-146412918-1');
 		</script>
+		<!-- //Google Analytics 追蹤碼 -->
 		<!-- //Google Analytics 驗證 -->
 		
 	</head>
