棄用 document.write

--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@
 		</div>
 		<div class="footer">
 			<div class="content">
-				<p>
+				<p id="footerCopyright">
 					<script type="text/javascript">
-						document.write("Copyright &copy; 2015-" + new Date().getFullYear());
+						document.getElementById('footerCopyright').innerHTML = "Copyright &copy; 2015-" + new Date().getFullYear();
 					</script>
 					<a href="https://fb.me/nkustAcappella" target="_blank"> 國立高雄科技大學 A CAPPELLA 社 </a> | Powered by <a href="mailto:c107118223@nkust.edu.tw@nkust.edu.tw"> Chen, Hsin-Wei </a> | Designed by TemplateMo(Moonlight) | <a href="https://github.com/nkustacappella/nkustacappella.github.io" target="_blank"> GitHub </a>
 				</p>
