圖片加入 alt 標籤

--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
 		</div>
 		<nav>
 			<div class="logo">
-				<img src="img/logo.png" alt="Moon Light">
+				<img src="img/logo.png" alt="logo">
 			</div>
 			<div class="mini-logo">
-				<img src="img/mini_logo.png" alt="">
+				<img src="img/mini_logo.png" alt="mini_logo">
 			</div>
 			<ul>
 				<li><a href="#1"><i class="fa fa-home"></i> <em>首　　頁</em></a></li>
@@ -235,7 +235,7 @@
 					<div class="container-fluid">
 						<div class="col-md-3">
 							<div class="author-image">
-								<img src="img/首頁_ICON.png" alt="">
+								<img src="img/首頁_ICON.png" alt="首頁_ICON">
 							</div>
 						</div>
 						<div class="col-md-9">
@@ -274,7 +274,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/關於我們_關於我們.png" alt="first service">
+													<img src="img/關於我們_關於我們.png" alt="關於我們_關於我們">
 												</div>
 											</div>
 										</div>
@@ -285,7 +285,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_什麼是ACappella.jpg" alt="second service">
+													<img src="img/關於我們_什麼是ACappella.jpg" alt="關於我們_什麼是ACappella">
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -312,7 +312,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/關於我們_創社經歷.jpg" alt="second service">
+													<img src="img/關於我們_創社經歷.jpg" alt="關於我們_創社經歷">
 												</div>
 											</div>
 										</div>
@@ -339,7 +339,7 @@
 											</div>
 											<div class="col-md-6">
 												<div class="right-image">
-													<img src="img/理念宗旨_Share the Joy.jpg" alt="first service">
+													<img src="img/理念宗旨_Share the Joy.jpg" alt="理念宗旨_Share the Joy">
 												</div>
 											</div>
 										</div>
@@ -350,7 +350,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="left-image">
-													<img src="img/理念宗旨_Find a Friend.jpg" alt="second service">
+													<img src="img/理念宗旨_Find a Friend.jpg" alt="理念宗旨_Find a Friend">
 												</div>
 											</div>
 											<div class="col-md-6">
